--- a/todolistapp/styles.css
+++ b/todolistapp/styles.css
@@ -9,6 +9,10 @@
     min-height: 100vh;
     background: linear-gradient(135deg, #bc3c3c, #4e085f);
     padding: 10px;
+    display: flex;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .todo-list{
     width: 100%;
@@ -99,8 +103,9 @@ ul li span{
     color: red;
     line-height: 40px;
     text-align: center;
+    border-radius: 50%;
 }
 ul li span:hover{
     background: #edeef0;
-    
+
 }
